--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
 server.port=9090
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/trip?serverTimezone=Asia/Seoul
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/trip
 spring.datasource.username=root
 spring.datasource.password=0000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Show SQL
-spring.jpa.properties.hibernate.show_sql=true
-# Format SQL
-spring.jpa.properties.hibernate.format_sql=true
-# DDL Auto
-spring.jpa.hibernate.ddl-auto=create
+# MyBatis configuration
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.exampl.traveler.vo
 
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# Static resources location
-spring.resources.static-locations=classpath:/static/,file:uploads/
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
