--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
+	compileOnly("org.springframework.boot:spring-boot-devtools")
 }
 
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
