--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+
+spring.thymeleaf.cache=false
