--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
-}
 
+}
+compileJava {
+	options.compilerArgs << '-parameters'
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
