게시판 작성과 상세보기 적용 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
-
+file.upload.path=C:/Users/dasuu/OneDrive/?? ??/traveler/src/main/resources/static/imgs
 spring.thymeleaf.cache=false
