--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 file.upload.path=C:/Users/dasuu/OneDrive/?? ??/traveler/src/main/resources/static/imgs
 spring.thymeleaf.cache=false
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Asia/Seoul
