--- a/src/main/resources/mapper/Package.xml
+++ b/src/main/resources/mapper/Package.xml
@@ -11,13 +11,17 @@
     </select>
 
     <insert id="insertOrder" parameterType="com.exampl.traveler.vo.UserOrderVO" useGeneratedKeys="true" keyProperty="orderId">
-        INSERT INTO orders (userID, comNO, binCate, totalCnt, orderDate)
-        VALUES (#{userId}, #{comNO}, #{binCate}, #{totalCnt}, #{orderDate})
+        INSERT INTO orders (userID, comNO, binCate, totalCnt, orderDate, useDate)
+        VALUES (#{userId}, #{comNO}, #{binCate}, #{totalCnt}, #{orderDate}, #{useDate})
     </insert>
 
-    <insert id="insertDiary">
+    <insert id="insertDiary" parameterType="java.util.Map">
         INSERT INTO DIARY (userID, orderID, GoDay, BackDay, DiaryTitle)
-        VALUES (#{userId}, #{orderID}, #{goDay}, #{backDay}, #{diaryTitle})
+        VALUES (#{userId}, #{orderId}, #{goDay}, #{backDay}, #{diaryTitle})
     </insert>
+
+    <select id="getLastInsertId" resultType="java.lang.Integer">
+        SELECT LAST_INSERT_ID()
+    </select>
 
 </mapper>
