--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ spring.jackson.time-zone=Asia/Seoul
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+imgbb.api.key=115376878bc76479b9c6775a72f120aa
+
