팩키지검색

--- a/src/main/resources/mapper/Package.xml
+++ b/src/main/resources/mapper/Package.xml
@@ -20,4 +20,15 @@
         VALUES (#{userId}, #{orderId}, #{goDay}, #{diaryTitle})
     </insert>
 
+    <select id="getPackages" parameterType="com.exampl.traveler.vo.PackageVO">
+        SELECT * FROM Package LIMIT 3
+    </select>
+
+
+
+    <select id="getPackagesNat" resultType="com.exampl.traveler.vo.PackageVO">
+        SELECT * FROM Package
+        WHERE packageTitle LIKE CONCAT('%', #{keyword}, '%')
+        OR packageText LIKE CONCAT('%', #{keyword}, '%')
+    </select>
 </mapper>
