--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,4 +47,4 @@ jobs:
           app-name: traveler-SSR  #각자 맞춰서 바꿔야함
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_TRAVEL_PROFILE }}  # 여기도 맞춰서 바꿔야함
-          package: build/libs/bechef-0.0.1-SNAPSHOT.jar
+          package: build/libs/traveler-0.0.1-SNAPSHOT.jar
