--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: traveler-SSR  #각자 맞춰서 바꿔야함
+          app-name: traveler-SSR  #각자 맞춰서 바꿔야함(에저 기준)
           slot-name: production
           publish-profile: ${{ secrets.AZURE_WEBAPP_TRAVEL_PROFILE }}  # 여기도 맞춰서 바꿔야함
-          package: build/libs/traveler-0.0.1-SNAPSHOT.jar
+          package: build/libs/traveler-0.0.1-SNAPSHOT.jar # 이것도 바꿔야함 
