--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,36 @@
-server.port=9090
 
+# ?? ??
+#server.port=9090
+#
 ## Database connection
 #spring.datasource.url=jdbc:mysql://localhost:3306/trip
 #spring.datasource.username=root
 #spring.datasource.password=0000
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
 
 
+# ??PC-> ??IP
+server.port=9090
+# Database connection
+#spring.datasource.url=jdbc:mysql://localhost:3306/trip
+#spring.datasource.username=root
+#spring.datasource.password=0000
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Dialect ??
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Hibernate ?? ?? ??
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
+#??? DB
 spring.application.name=traveler
-spring.datasource.url=jdbc:mysql://traveler.mysql.database.azure.com/traveler
-spring.datasource.username=root_traveler
-spring.datasource.password=qwer1234@
+spring.datasource.url=jdbc:mysql://portfolio-db.mysql.database.azure.com/traveler
+spring.datasource.username=minsuk
+spring.datasource.password=kms030303@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
